# notcurses_example

./: CMakeLists.txt  README.md
tetris/: background.h  clear.h  gravity.h  lock.h  main.cpp  main.h  movedown.h  movelateral.h  newpiece.h  rotate.h  score.h  stain.h  stuck.h  ticker.h
